phase 2 enhancement done