@@ -24,78 +24,73 @@ import java.util.List;
 public class Main {
     public static void main(String[] args) throws InterruptedException {
 
-        ParkingManager manager = setupParkingManager();
-
-        // -------- Vehicles --------
-        Vehicle bike = new Bike("BIKE-101");
-        Vehicle car = new Car("CAR-202");
-        Vehicle truck = new Truck("TRUCK-303");
-
-        // -------- Scenario 1: Normal Parking --------
-        System.out.println("=== Scenario 1: Normal Parking ===");
-        Ticket bikeTicket = manager.park(bike);
-        System.out.println("Bike parked at: " + bikeTicket.getSlot().getSlotId());
-
-        Ticket carTicket = manager.park(car);
-        System.out.println("Car parked at: " + carTicket.getSlot().getSlotId());
-
-        Ticket truckTicket = manager.park(truck);
-        System.out.println("Truck parked at: " + truckTicket.getSlot().getSlotId());
-
-        Thread.sleep(2000);
-
-        // -------- Scenario 2: Exit & Fee Calculation --------
-        System.out.println("\n=== Scenario 2: Exit & Fee ===");
-        System.out.println("Bike fee: " + manager.exit(bikeTicket));
-        System.out.println("Car fee: " + manager.exit(carTicket));
-        System.out.println("Truck fee: " + manager.exit(truckTicket));
-
-        // -------- Scenario 3: Reuse Freed Slots --------
-        System.out.println("\n=== Scenario 3: Reuse Freed Slots ===");
-        Vehicle car2 = new Car("CAR-404");
-        Ticket car2Ticket = manager.park(car2);
-        System.out.println("Car2 parked at: " + car2Ticket.getSlot().getSlotId());
-        manager.exit(car2Ticket);
-
-
-        // -------- Scenario 4: Parking Lot Full --------
-        System.out.println("\n=== Scenario 4: Parking Lot Full ===");
-        List<Ticket> tickets = new ArrayList<>();
-        try {
-            tickets.add(manager.park(new Bike("BIKE-1")));
-            tickets.add(manager.park(new Bike("BIKE-2")));
-            tickets.add(manager.park(new Bike("BIKE-3"))); // should fail
-        } catch (Exception e) {
-            System.out.println("Expected error: " + e.getMessage());
-        } finally {
-            for (Ticket t : tickets) {
-                manager.exit(t);
-            }
-        }
-
-
+//        ParkingManager manager = setupParkingManager();
+//
+//        // -------- Vehicles --------
+//        Vehicle bike = new Bike("BIKE-101");
+//        Vehicle car = new Car("CAR-202");
+//        Vehicle truck = new Truck("TRUCK-303");
+//
+//        // -------- Scenario 1: Normal Parking --------
+//        System.out.println("=== Scenario 1: Normal Parking ===");
+//        Ticket bikeTicket = manager.park(bike);
+//        System.out.println("Bike parked at: " + bikeTicket.getSlot().getSlotId());
+//
+//        Ticket carTicket = manager.park(car);
+//        System.out.println("Car parked at: " + carTicket.getSlot().getSlotId());
+//
+//        Ticket truckTicket = manager.park(truck);
+//        System.out.println("Truck parked at: " + truckTicket.getSlot().getSlotId());
+//
+//        Thread.sleep(2000);
+//
+//        // -------- Scenario 2: Exit & Fee Calculation --------
+//        System.out.println("\n=== Scenario 2: Exit & Fee ===");
+//        System.out.println("Bike fee: " + manager.exit(bikeTicket));
+//        System.out.println("Car fee: " + manager.exit(carTicket));
+//        System.out.println("Truck fee: " + manager.exit(truckTicket));
+//
+//        // -------- Scenario 3: Reuse Freed Slots --------
+//        System.out.println("\n=== Scenario 3: Reuse Freed Slots ===");
+//        Vehicle car2 = new Car("CAR-404");
+//        Ticket car2Ticket = manager.park(car2);
+//        System.out.println("Car2 parked at: " + car2Ticket.getSlot().getSlotId());
+//        manager.exit(car2Ticket);
+//
+//
+//        // -------- Scenario 4: Parking Lot Full --------
+//        System.out.println("\n=== Scenario 4: Parking Lot Full ===");
+//        List<Ticket> tickets = new ArrayList<>();
+//        try {
+//            tickets.add(manager.park(new Bike("BIKE-1")));
+//            tickets.add(manager.park(new Bike("BIKE-2")));
+//            tickets.add(manager.park(new Bike("BIKE-3"))); // should fail
+//        } catch (Exception e) {
+//            System.out.println("Expected error: " + e.getMessage());
+//        } finally {
+//            for (Ticket t : tickets) {
+//                manager.exit(t);
+//            }
+//        }
+//
+//
+//    }
     }
+    public static ParkingManager setupParkingManager() {
+        Floor floor1 = new Floor(1, new ArrayList<>());
+        Floor floor2 = new Floor(2, new ArrayList<>());
 
-    private static ParkingManager setupParkingManager() {
+        floor1.addSlot(new ParkingSlot("F1-S1", SlotType.BIKE, floor1));
+        floor1.addSlot(new ParkingSlot("F1-S2", SlotType.CAR, floor1));
+        floor1.addSlot(new ParkingSlot("F1-S3", SlotType.TRUCK, floor1));
 
-        List<ParkingSlot> floor1Slots = Arrays.asList(
-                new ParkingSlot("F1-S1", SlotType.BIKE),
-                new ParkingSlot("F1-S2", SlotType.CAR),
-                new ParkingSlot("F1-S3", SlotType.TRUCK)
-        );
-
-        List<ParkingSlot> floor2Slots = Arrays.asList(
-                new ParkingSlot("F2-S1", SlotType.BIKE),
-                new ParkingSlot("F2-S2", SlotType.CAR),
-                new ParkingSlot("F2-S3", SlotType.TRUCK)
-        );
-
-        Floor floor1 = new Floor(1, floor1Slots);
-        Floor floor2 = new Floor(2, floor2Slots);
+        floor2.addSlot(new ParkingSlot("F2-S1", SlotType.BIKE, floor2));
+        floor2.addSlot(new ParkingSlot("F2-S2", SlotType.CAR, floor2));
+        floor2.addSlot(new ParkingSlot("F2-S3", SlotType.TRUCK, floor2));
 
         ParkingLot lot = new ParkingLot(
                 "Mall-Parking",
-                Arrays.asList(floor1, floor2)
+                List.of(floor1, floor2)
         );
 
         FeeCalculator feeCalculator = new DefaultFeeCalculator();
